Updated User API web services
Updated User API web services
